--- a/Models/Cockpit/Models/engine-rating.ac
+++ b/Models/Cockpit/Models/engine-rating.ac
@@ -1,19 +1,17 @@
 AC3Db
-MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
-MATERIAL "Label.009" rgb 0 0 0 amb 0 0 0 emis 0 0 0 spec 0 0 0 shi 128 trans 0
-MATERIAL "Yellow.009" rgb 0.5 0.5 0 amb 0.166667 0.166667 0.166667 emis 0.133333 0.133333 0.133333 spec 0.3 0.3 0.3 shi 128 trans 0
-MATERIAL "Frame.023" rgb 0.705 0.789 0.868 amb 1 1 1 emis 0.3 0.3 0.3 spec 0.15 0.15 0.15 shi 128 trans 0
-MATERIAL "White.016" rgb 0.5 0.5 0.5 amb 0.5 0.5 0.5 emis 0.2 0.2 0.2 spec 0.3 0.3 0.3 shi 128 trans 0
+MATERIAL "White.016" rgb 0.500 0.500 0.500  amb 0.500 0.500 0.500  emis 0.200 0.200 0.200  spec 0.300 0.300 0.300  shi 128 trans 0.000
+MATERIAL "Label.009" rgb 0.000 0.000 0.000  amb 0.000 0.000 0.000  emis 0.000 0.000 0.000  spec 0.000 0.000 0.000  shi 128 trans 0.000
+MATERIAL "Yellow.009" rgb 0.500 0.500 0.000  amb 0.167 0.167 0.167  emis 0.133 0.133 0.133  spec 0.300 0.300 0.300  shi 128 trans 0.000
 OBJECT world
-kids 9
+name "Blender_exporter_v2.19__engine-rating.ac"
+kids 8
 OBJECT poly
 name "CLB"
-loc 0 0 -0
 data 3
 CLB
+crease 40.0
 texture "white_plastic.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 8
 0.005 -0.01536 0.0075
 0.005 -0.01536 -0.0075
@@ -24,43 +22,43 @@ numvert 8
 0.008 -0.00486 -0.0075
 0.008 -0.00486 0.0075
 numsurf 6
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 1 1 1
 0 1 0
 4 0 0
 5 0 1
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 5 0 1
 6 0 1
 2 1 1
 1 1 1
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 6 0 1
 7 0 0
 3 1 0
 2 1 1
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 0 1 0
 3 1 0
 7 0 0
 4 0 0
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 0 1 0
 1 1 1
 2 1 1
 3 1 0
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 7 0 0
 6 0 1
@@ -69,34 +67,32 @@ refs 4
 kids 0
 OBJECT poly
 name "CLBLabel"
-loc 0 0 -0
 data 8
 CLBLabel
+crease 40.0
 texture "engine-rating.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 4
 0.0081 -0.01637 -0.0075
 0.0081 -0.01637 0.0075
 0.0081 -0.00587 -0.0075
 0.0081 -0.00587 0.0075
 numsurf 1
-SURF 0x20
+SURF 0X20
 mat 1
 refs 4
-1 0 0.07500000298
-0 0.5 0.07500000298
-2 0.5 0.425000011921
-3 0 0.425000011921
+1 0 0.075
+0 0.5 0.075
+2 0.5 0.425
+3 0 0.425
 kids 0
 OBJECT poly
 name "CRS"
-loc 0 0 -0
 data 3
 CRS
+crease 40.0
 texture "white_plastic.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 8
 0.005 -0.03014 0.0075
 0.005 -0.03014 -0.0075
@@ -107,43 +103,43 @@ numvert 8
 0.008 -0.01964 -0.0075
 0.008 -0.01964 0.0075
 numsurf 6
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 1 1 1
 0 1 0
 4 0 0
 5 0 1
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 5 0 1
 6 0 1
 2 1 1
 1 1 1
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 6 0 1
 7 0 0
 3 1 0
 2 1 1
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 0 1 0
 3 1 0
 7 0 0
 4 0 0
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 0 1 0
 1 1 1
 2 1 1
 3 1 0
-SURF 0x20
-mat 4
+SURF 0X20
+mat 0
 refs 4
 7 0 0
 6 0 1
@@ -152,34 +148,32 @@ refs 4
 kids 0
 OBJECT poly
 name "CRSLabel"
-loc 0 0 -0
 data 8
 CRSLabel
+crease 40.0
 texture "engine-rating.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 4
 0.0081 -0.03104 -0.0075
 0.0081 -0.03104 0.0075
 0.0081 -0.02054 -0.0075
 0.0081 -0.02054 0.0075
 numsurf 1
-SURF 0x20
+SURF 0X20
 mat 1
 refs 4
-1 0.5 0.07500000298
-0 1 0.07500000298
-2 1 0.425000011921
-3 0.5 0.425000011921
+1 0.5 0.075
+0 1 0.075
+2 1 0.425
+3 0.5 0.425
 kids 0
 OBJECT poly
 name "CTY"
-loc 0 0 -0
 data 3
 CTY
+crease 40.0
 texture "yellow_plastic.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 8
 0.005 0.01467 0.0075
 0.005 0.01467 -0.0075
@@ -190,140 +184,77 @@ numvert 8
 0.008 0.02517 -0.0075
 0.008 0.02517 0.0075
 numsurf 6
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-1 0.000000455165 0
-0 0.000000455165 1
+1 0 0
+0 0 1
 4 1 1
-5 1 0.000000159308
-SURF 0x20
+5 1 0
+SURF 0X20
 mat 2
 refs 4
-5 1 0.000000159308
-6 0.999999582767 0.000000159308
+5 1 0
+6 1 0
 2 0 0
-1 0.000000455165 0
-SURF 0x20
+1 0 0
+SURF 0X20
 mat 2
 refs 4
-6 0.999999582767 0.000000159308
-7 0.999999582767 1
+6 1 0
+7 1 1
 3 0 1
 2 0 0
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-0 0.000000455165 1
+0 0 1
 3 0 1
-7 0.999999582767 1
+7 1 1
 4 1 1
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-0 0.000000455165 1
-1 0.000000455165 0
+0 0 1
+1 0 0
 2 0 0
 3 0 1
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-7 0.999999582767 1
-6 0.999999582767 0.000000159308
-5 1 0.000000159308
+7 1 1
+6 1 0
+5 1 0
 4 1 1
 kids 0
 OBJECT poly
 name "CTYLabel"
-loc 0 0 -0
 data 8
 CTYLabel
+crease 40.0
 texture "engine-rating.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 4
 0.0081 0.01343 -0.0075
 0.0081 0.01343 0.0075
 0.0081 0.02393 -0.0075
 0.0081 0.02393 0.0075
 numsurf 1
-SURF 0x20
+SURF 0X20
 mat 1
 refs 4
-1 0 0.574999988079
-0 0.5 0.574999988079
-2 0.5 0.925000011921
-3 0 0.925000011921
-kids 0
-OBJECT poly
-name "Frame"
-loc 0 0 -0
-data 5
-Frame
-texture "panel.png"
-texrep 1.000000 1.000000
-crease 39.999999
-numvert 8
-0 -0.03137 0.01
-0 -0.03137 -0.01
-0.005 -0.03137 -0.01
-0.005 -0.03137 0.01
-0 0.02673 0.01
-0 0.02673 -0.01
-0.005 0.02673 -0.01
-0.005 0.02673 0.01
-numsurf 6
-SURF 0x20
-mat 3
-refs 4
-1 0.215203002095 0.097344003618
-0 0.215203002095 0.107344001532
-4 0.244252994657 0.107344001532
-5 0.244252994657 0.097344003618
-SURF 0x20
-mat 3
-refs 4
-5 0.229727998376 0.118027999997
-6 0.232227995992 0.118027999997
-2 0.232227995992 0.088977999985
-1 0.229727998376 0.088977999985
-SURF 0x20
-mat 3
-refs 4
-6 0.580321013927 0.466196000576
-7 0.580321013927 0.60444098711
-3 0.412739008665 0.60444098711
-2 0.412739008665 0.466196000576
-SURF 0x20
-mat 3
-refs 4
-0 0.229727998376 0.088977999985
-3 0.232227995992 0.088977999985
-7 0.232227995992 0.118027999997
-4 0.229727998376 0.118027999997
-SURF 0x20
-mat 3
-refs 4
-0 0.229727998376 0.107344001532
-1 0.229727998376 0.097344003618
-2 0.232227995992 0.097344003618
-3 0.232227995992 0.107344001532
-SURF 0x20
-mat 3
-refs 4
-7 0.232227995992 0.107344001532
-6 0.232227995992 0.097344003618
-5 0.229727998376 0.097344003618
-4 0.229727998376 0.107344001532
+1 0 0.575
+0 0.5 0.575
+2 0.5 0.925
+3 0 0.925
 kids 0
 OBJECT poly
 name "TO"
-loc 0 0 -0
 data 2
 TO
+crease 40.0
 texture "yellow_plastic.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 8
 0.005 -0.00057 0.0075
 0.005 -0.00057 -0.0075
@@ -334,68 +265,67 @@ numvert 8
 0.008 0.00993 -0.0075
 0.008 0.00993 0.0075
 numsurf 6
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-1 0.000000455165 0
-0 0.000000455165 1
+1 0 0
+0 0 1
 4 1 1
-5 1 0.000000159308
-SURF 0x20
+5 1 0
+SURF 0X20
 mat 2
 refs 4
-5 1 0.000000159308
-6 0.999999582767 0.000000159308
+5 1 0
+6 1 0
 2 0 0
-1 0.000000455165 0
-SURF 0x20
+1 0 0
+SURF 0X20
 mat 2
 refs 4
-6 0.999999582767 0.000000159308
-7 0.999999582767 1
+6 1 0
+7 1 1
 3 0 1
 2 0 0
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-0 0.000000455165 1
+0 0 1
 3 0 1
-7 0.999999582767 1
+7 1 1
 4 1 1
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-0 0.000000455165 1
-1 0.000000455165 0
+0 0 1
+1 0 0
 2 0 0
 3 0 1
-SURF 0x20
+SURF 0X20
 mat 2
 refs 4
-7 0.999999582767 1
-6 0.999999582767 0.000000159308
-5 1 0.000000159308
+7 1 1
+6 1 0
+5 1 0
 4 1 1
 kids 0
 OBJECT poly
 name "TOLabel"
-loc 0 0 -0
 data 7
 TOLabel
+crease 40.0
 texture "engine-rating.png"
-texrep 1.000000 1.000000
-crease 39.999999
+texrep 1 1
 numvert 4
 0.0081 -0.00136 -0.0075
 0.0081 -0.00136 0.0075
 0.0081 0.00914 -0.0075
 0.0081 0.00914 0.0075
 numsurf 1
-SURF 0x20
+SURF 0X20
 mat 1
 refs 4
-1 0.5 0.574999988079
-0 1 0.574999988079
-2 1 0.925000011921
-3 0.5 0.925000011921
+1 0.5 0.575
+0 1 0.575
+2 1 0.925
+3 0.5 0.925
 kids 0
